@@ -308,7 +308,7 @@ number. For example C<3> or C<[3]>.
 =item B<N>
 
 number of points in window function (the same as the order of the filter).
-No default value.
+As of 0.102, throws exception if the value for C<N> is undefined.
 
 =item B<periodic>
 
@@ -394,6 +394,7 @@ sub new {
 
 Initialize (or reinitialize) a window object. C<ARGS> are interpreted in
 exactly the same way as arguments for the L</window> subroutine.
+As of 0.102, throws exception if the value for C<N> is undefined.
 
 =for example
 
@@ -436,7 +437,7 @@ sub init {
     }
 
     $self->{name}     = $name;
-    $self->{N}        = $N;
+    $self->{N}        = $N // die "Can't continue with undefined value for N";
     $self->{periodic} = $periodic;
     $self->{params}   = $params;
     $self->{code}     = __PACKAGE__->can( $name . ( $periodic ? '_per' : '' ) );
