@@ -2,6 +2,9 @@ Revision history for PDL-DSP-Windows
 
 {{$NEXT}}
 
+Fixes:
+  * Make window and init fail if no defined N given.
+
 0.100     2021-11-01 20:51:14 GMT
 
 No changes since last release
